# QRT-2024-Challenge

./: .gitignore  README.md  pyproject.toml
models/: mlp.ipynb  xgb.ipynb
