[tool.poetry]
name = "qrt data challenge"
version = "0.1.0"
description = ""
authors = ["Theo Obadiah Teguh <theo1329@students.cs.ubc.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
seaborn = "^0.13.2"
fancyimpute = "^0.7.0"
xgboost = "^2.1.2"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
